--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Based PM Internship Scheme</title>
-  <link rel="icon" href="assests/LOGO.jpeg" alt="mca_logo">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="login.css">
+  <link rel="icon" href="assets/LOGO.jpeg" alt="mca_logo">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
@@ -15,21 +15,21 @@
   <header>
     <div class="head_container" style="background: black;">
       <div class="header">
-        <img src="assests/Flag_of_India.jpeg" alt="Flag_of_India" style="height: 20px; width: 30px;">
+        <img src="assets/Flag_of_India.jpeg" alt="Flag_of_India" style="height: 20px; width: 30px;">
         <p style="font-size: 14px; color: white;">भारत सरकार / Government Of India</p>
       </div>
     </div>
     <!--Navigation-->
     <nav class="nav">
       <div class="logo">
-        <img src="assests/LOGO.jpeg" alt="PM Internship Scheme" style="height: 45px; width: 102px;">
-        <img src="assests/pm_intern.jpeg" alt="PM Internship" style="height: 49px; width: 110px;">
+        <img src="assets/LOGO.jpeg" alt="PM Internship Scheme" style="height: 45px; width: 102px;">
+        <img src="assets/pm_intern.jpeg" alt="PM Internship" style="height: 49px; width: 110px;">
       </div>
       <div class="nav_button" id="auth-buttons">
         <a href="#"><button id="registerBtn">Youth Registration</button></a>
         <a href="#"><button id="loginBtn">Login</button></a>
         <a href="profile.html"><img id="profilePic" class="profile-pic" src="" alt="Profile" style="display:none;" /></a>
-        <img src="assests/Bikashit Varat.jpeg" alt="Bikashit Varat" style="height: 49px; width: 110px;">
+        <img src="assets/Bikashit Varat.jpeg" alt="Bikashit Varat" style="height: 49px; width: 110px;">
       </div>
     </nav>
   </header>
@@ -43,7 +43,7 @@
         <button>Search</button>
       </div>
       <div class="pm_image">
-        <img src="assests/pm.jpeg" alt="pm_image" style="height: 205px; width: 200px;">
+        <img src="assets/pm.jpeg" alt="pm_image" style="height: 205px; width: 200px;">
       </div>
     </section>
 
@@ -69,7 +69,7 @@
     </div>
   </div>
   </main>
-  <script src="login.js"></script>
+  <script src="js/login.js"></script>
 </body>
 
 </html>
