--- a/frontend/ai.html
+++ b/frontend/ai.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI-Based Recommendations Engine</title>
-  <link rel="stylesheet" href="ai.css">
+  <link rel="stylesheet" href="css/ai.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
@@ -196,6 +196,6 @@
       <button type="submit" class="btn primary submit-btn"><i class="fas fa-robot"></i> Get AI Recommendations</button>
     </div>
   </form>
-  <script src="ai.js"></script>
+  <script src="js/ai.js"></script>
 </body>
 </html>
