--- a/frontend/inship.html
+++ b/frontend/inship.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Internships</title>
-    <link rel="stylesheet" href="inship.css"/>
+    <link rel="stylesheet" href="css/inship.css"/>
 </head>
 <body>
 
