--- a/frontend/ai.html
+++ b/frontend/ai.html
@@ -38,13 +38,13 @@
     <div class="section">
       <div class="subhead"><i class="fas fa-file-pdf"></i> <span id="resumeUploadTitle">Resume Upload</span></div>
       <p id="resumeUploadDesc" class="section-description">
-        Upload your resume to automatically extract your information.
+        Upload your resume to automatically extract your information. (Optional)
       </p>
       
       <div class="field">
-        <label for="resumeUpload"><span id="uploadLabel">Upload Resume (PDF)</span><span style="color: red;">*</span></label>
-        <input type="file" id="resumeUpload" class="control" accept=".pdf" required />
-        <div id="uploadHint" class="hint">Supported format: PDF only</div>
+        <label for="resumeUpload"><span id="uploadLabel">Upload Resume (PDF)</span></label>
+        <input type="file" id="resumeUpload" class="control" accept=".pdf" />
+        <div id="uploadHint" class="hint">Supported format: PDF only (Optional)</div>
         <button type="button" id="extractBtn" class="btn secondary" style="margin-top: 10px; display: none;">
           <i class="fas fa-search"></i> <span id="extractInfo">Extract Information</span>
         </button>
