--- a/frontend/ai.html
+++ b/frontend/ai.html
@@ -228,6 +228,13 @@
       <button type="reset" class="btn secondary"><i class="fas fa-undo"></i> <span id="resetBtn">Reset Form</span></button>
       <button type="submit" class="btn primary submit-btn"><i class="fas fa-robot"></i> <span id="getRecommendationsBtn">Get AI Recommendations</span></button>
     </div>
+    
+    <!-- Note about translation feature -->
+    <div class="translation-note" style="margin-top: 15px; padding: 10px; background-color: #e3f2fd; border-radius: 5px; text-align: center;">
+      <p style="margin: 0; color: #1976d2; font-size: 0.9rem;">
+        <i class="fas fa-language"></i> After getting recommendations, you can translate internship details to Hindi or Bengali using the language buttons on each card.
+      </p>
+    </div>
   </form>
   <script src="js/ai.js"></script>
 </body>
